backend/swagger - management routes updated
-swagger doc updated to the latest version
-small route corrections
-added repo config info route
-TODO: update repo config route
