# backend/swagger.json
@@ -264,24 +264,121 @@
                     }
                   }
                 }
+              },
+              "text/csv": {
+                "schema": {
+                  "type": "string"
+                }
               }
             }
           },
           "400": {
-            "description": "Bad request"
+            "description": "Bad request."
+          },
+          "406": {
+            "description": "Invalid accept type."
+          }
+        }
+      }
+    },
+    "/rdf4j/management/repoInfo/{repository}": {
+      "get": {
+        "tags": [
+          "RDF4J"
+        ],
+        "summary": "Repository configuration",
+        "parameters": [
+          {
+            "in": "path",
+            "required": true,
+            "name": "repository",
+            "description": "Target Repository",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Request success",
+            "content": {
+              "text/turtle": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/x-turtle": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/rdf+xml": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/rdf+n3": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/x-nquads": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/ld+json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/rdf+json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/trix": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/x-trig": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/x-binary-rdf": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request."
+          },
+          "404": {
+            "description": "Unknown Repository. Repository does not exist."
+          },
+          "406": {
+            "description": "Invalid accept type."
           }
         }
       }
     },
     "/rdf4j/management/create": {
-      "post": {
+      "put": {
         "tags": [
           "RDF4J"
         ],
         "summary": "Create a new Repository",
-        "description": "Create a new Repository.\nCreating a repository with a Repository ID that already exists will overwrite the old one,\nlikely resulting is data loss.\n",
         "requestBody": {
-          "description": "Login credentials.",
+          "description": "Configuration values.",
           "required": true,
           "content": {
             "application/x-www-form-urlencoded": {
@@ -291,38 +388,104 @@
                   "type": {
                     "type": "string",
                     "enum": [
-                      "memory",
-                      "memory-rdfs-dt",
                       "native",
-                      "native-rdfs-dt"
+                      "native-rdfs-dt",
+                      "memory",
+                      "memory-rdfs-dt"
                     ],
-                    "default": "memory"
+                    "default": "native"
                   },
                   "Repository ID": {
                     "type": "string"
                   },
-                  "Repository title": {
+                  "Repository Title": {
                     "type": "string"
+                  },
+                  "Persist": {
+                    "type": "boolean",
+                    "default": true
                   }
                 },
-                "example": {
-                  "type": "memory-rdfs-dt",
-                  "Repository ID": "test",
-                  "Repository title": "test"
-                }
+                "required": [
+                  "type",
+                  "Repository ID",
+                  "Repository Title"
+                ]
               }
             }
           }
         },
         "responses": {
           "200": {
-            "description": "Create success"
+            "description": "Create success."
           },
           "400": {
-            "description": "Bad request"
+            "description": "Bad request."
           },
-          "default": {
-            "description": "TODO (already existing repo ID)"
+          "409": {
+            "description": "Repository already exists."
+          },
+          "500": {
+            "description": "Internal Error. Likely configuration error. Possibly bad configuration values."
+          }
+        }
+      }
+    },
+    "/rdf4j/management/update": {
+      "post": {
+        "tags": [
+          "RDF4J"
+        ],
+        "deprecated": true,
+        "summary": "Update existing Repository",
+        "requestBody": {
+          "description": "New configuration values. Only 'Repository ID' cannot be changed. Any other given\nconfiguration will replace the previous. **NOTE** if the new configuration is not \ncompatible with the previous **information can be lost**.\n",
+          "required": true,
+          "content": {
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "enum": [
+                      "native",
+                      "native-rdfs-dt",
+                      "memory",
+                      "memory-rdfs-dt"
+                    ],
+                    "default": "native"
+                  },
+                  "Repository ID": {
+                    "type": "string"
+                  },
+                  "Repository Title": {
+                    "type": "string"
+                  },
+                  "Persist": {
+                    "type": "boolean",
+                    "default": true
+                  }
+                },
+                "required": [
+                  "Repository ID"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Create success."
+          },
+          "400": {
+            "description": "Bad request."
+          },
+          "404": {
+            "description": "Unknown Repository. Repository does not exist."
+          },
+          "500": {
+            "description": "Internal Error. Likely configuration error. Possibly bad configuration values."
           }
         }
       }
@@ -340,17 +503,19 @@
             "name": "repository",
             "description": "Target Repository",
             "schema": {
-              "type": "string",
-              "example": "test"
+              "type": "string"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "Delete success"
+            "description": "Delete success."
           },
           "400": {
-            "description": "Bad request (or the repository does not exist)"
+            "description": "Bad request."
+          },
+          "404": {
+            "description": "Unknown Repository. Repository does not exist."
           }
         }
       }
@@ -368,17 +533,19 @@
             "name": "repository",
             "description": "Target Repository",
             "schema": {
-              "type": "string",
-              "example": "test"
+              "type": "string"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "Clear success"
+            "description": "Clear success."
           },
           "400": {
-            "description": "Bad request (or the repository does not exist)"
+            "description": "Bad request."
+          },
+          "404": {
+            "description": "Unknown Repository. Repository does not exist."
           }
         }
       }
@@ -605,68 +772,57 @@
           "content": {
             "text/turtle": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/x-turtle": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/rdf+xml": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "text/plain": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "text/rdf+n3": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "text/x-nquads": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/ld+json": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/rdf+json": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/trix": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/x-trig": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/x-binary-rdf": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             }
           }
@@ -704,68 +860,57 @@
           "content": {
             "text/turtle": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/x-turtle": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/rdf+xml": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "text/plain": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "text/rdf+n3": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "text/x-nquads": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/ld+json": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/rdf+json": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/trix": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/x-trig": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             },
             "application/x-binary-rdf": {
               "schema": {
-                "type": "string",
-                "format": "binary"
+                "type": "string"
               }
             }
           }
